<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background" />


    <ImageView
        android:id="@+id/image_ariana"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.0"
        android:scaleType="centerCrop"
        android:src="@drawable/logo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relLayout1">

        <!-- toolbar -->
        <include layout="@layout/snippet_top_signuptoolbar"/>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="79dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/txt_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/signup_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/grey"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/signup_password"
            android:inputType="textPassword"
            android:textColor="@color/grey"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/txt_nickname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:background="@color/white"
            android:hint="@string/nickname"
            android:textColor="@color/grey"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin2"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_below="@+id/lin1"
        android:layout_marginBottom="212dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginBottom="212dp"
            android:layout_marginLeft="30dp"
            android:text="@string/therapist_refer"
            android:textColor="@color/white"
            android:textSize="12sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin3"
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lin2"
        android:layout_marginTop="-212dp"
        android:orientation="vertical">


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/white_rounded_button"
            android:padding="12dp"
            android:text="@string/get_started"
            android:textColor="@color/black"
            android:textSize="20sp" />


    </LinearLayout>



</RelativeLayout>